<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp">


    <CheckBox
        android:id="@+id/macosx"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="273dp"
        android:layout_marginTop="401dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/macos"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/linux"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="402dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/linux"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/comfortaa"
        android:lineSpacingExtra="18sp"
        android:text="@string/developer_label"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="51dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/choice_label"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="272dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/coffee"
            android:layout_width="126dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/comfortaa"
            android:text="@string/coffee"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/tea"
            android:layout_width="145dp"
            android:layout_height="28dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/tea"
            android:textSize="18sp" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/windows"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="401dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/windows"
        android:textSize="18sp" />

            <EditText
                android:id="@+id/programming_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="76dp"
                android:layout_marginBottom="384dp"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="152dp"
                android:layout_marginBottom="302dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/submit" />

            <TextView
        android:id="@+id/drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="226dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/drink"
        android:textSize="24sp" />

            <TextView
                android:id="@+id/os"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="339dp"
                android:fontFamily="@font/permanent_marker"
                android:text="@string/os"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pl"
                android:layout_width="331dp"
                android:layout_height="32dp"
                android:layout_below="@+id/linux"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="67dp"
                android:layout_marginBottom="467dp"
                android:fontFamily="@font/permanent_marker"
                android:text="@string/pl"
                android:textSize="18sp" />

            <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="89dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/score"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/zero"
        android:textSize="30sp" />

</RelativeLayout>
    </LinearLayout>
</ScrollView>